@@ -274,6 +274,10 @@ div.calloutlist * td {
 	font-size: 100%;
 }
 
+.programlisting {
+   clear: both;
+}
+
 .programlisting .interfacename,
 .programlisting .literal,
 .programlisting .classname {
